# xtal-gui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FACET_DESIGN.md  README.md  bundle-stats.html  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
docker/: linux-gui.Dockerfile
docs/: CODE_QUALITY_REVIEW.md
icons/: icon.icns
src/: App.tsx  main.tsx
src-tauri/src/: abi_cache.rs  config.rs  events.rs  ipfs.rs  main.rs  platform.rs  state.rs
src-tauri/src/commands/: blockchain.rs  contract.rs  mempool.rs  mining.rs  mod.rs  network.rs  rpc_console.rs  setup.rs  startup.rs  tx_detail_utils.rs  validator.rs  wallet.rs
src/components/Dashboard/: AddWidgetDialog.tsx  Dashboard.tsx  DashboardGrid.tsx  WidgetShell.tsx  (+2 more)
src/hooks/: index.ts  useAnimatedBlockList.ts  useContractDashboard.ts  useContractValue.ts  useDiagnosticMonitor.ts  useIncomingMempoolTxs.ts  useMediaQuery.ts  useMempoolInfo.ts  useNodeWebSocket.ts  useTauriCommand.ts  useTauriEvent.ts
src/lib/: address.ts  caseConvert.ts  contractQuery.ts  difficulty.ts  fruitColors.ts  maturity.ts  pagination.ts  txOwnership.ts  utils.ts
src/stores/: blockchainStore.ts  dashboardStore.ts  gatewayStore.ts  index.ts  miningStore.ts  networkStore.ts  uiStore.ts  validatorStore.ts  walletStore.ts
src/styles/: globals.css
src/types/: blockchain.ts  contract.ts  dashboard.ts  events.ts  global.d.ts  gui.ts  index.ts  mining.ts  network.ts  rpc.ts  startup.ts  validator.ts  wallet.ts  ws.ts
(+102 files in other folders)
