[package]
name = "crystal-gui"
version = "0.7.58"
description = "Crystal Blockchain GUI - Bitcoin-Qt style interface"
authors = ["Crystal Labs"]
edition = "2021"
license = "MIT"
default-run = "crystal-gui"
build = "src-tauri/build.rs"


[[bin]]
name = "crystal-gui"
path = "src-tauri/src/main.rs"

[dependencies]
# Core xtal library
xtal = { path = ".." }

# Crypto (for VerifyingKey - already a transitive dep via xtal)
ed25519-dalek = "2"

# U256 type for difficulty calculations (must match version used by xtal)
primitive-types = "0.13"

# Tauri v2
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# URL opening
open = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Platform directories
directories = "6.0"

# IPFS ABI distribution
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
sha2 = "0.10"
data-encoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[workspace]
